# issue-agent

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/skills/issue-fix/: SKILL.md
.claude/skills/repo-graph/: SKILL.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
issue_agent/: __init__.py  cli.py  fix.py  graph.py  init.py  prompts.py
specs/001-issue-agent-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-issue-agent-core/checklists/: requirements.md
specs/001-issue-agent-core/contracts/: cli.md
tests/: test_cli.py  test_init.py  test_prompts.py
