[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "issue-agent"
version = "0.1.0"
description = "AI-powered CLI for automated GitHub issue fixing and dependency graph scanning"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.1.0",
]

[project.scripts]
issue-agent = "issue_agent.cli:main"

[tool.setuptools.packages.find]
include = ["issue_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
